--- a/css/style.css
+++ b/css/style.css
@@ -20,11 +20,11 @@
   font-weight: bold;
   font-size: 2em;
 }
-@media (max-width: 600px) {
-  text area {
-    width: 100%;
-  }
-}
- text area {
+
+ textarea {
    max-width: 100%;
+ } 
+
+ body{
+  margin:auto;
  }
